--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,12 @@ img {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+
+.social {
+  width: 100%;
+  text-align: center;
+}
+
+.social img {
+  margin: 20px 5px 10px 5px;
+}
